# building-an-industrial-iot-data-pipeline-with-aws

./: ._.git  ._.github  ._.gitignore  ._.mypy_cache  ._.pre-commit-config.yaml  ._.pytest_cache  ._LICENSE  ._README.md  .___pycache__  ._article.md  ._benchmark_rust.py  ._config.yaml  ._main.py  ._pyproject.toml  ._rust  ._src  ._tests  README.md  article.md  benchmark_rust.py  config.yaml  main.py  pyproject.toml
.github/: ._workflows
.github/workflows/: ._ci.yml
rust/: ._Cargo.toml  ._bench  ._core  ._py  ._target
rust/bench/: ._Cargo.toml  ._src  Cargo.toml
rust/bench/src/: ._main.rs  main.rs
rust/core/: ._Cargo.toml  ._src  Cargo.toml
rust/core/src/: ._lib.rs  lib.rs
rust/py/: ._Cargo.toml  ._src  Cargo.toml
rust/py/src/: ._lib.rs  lib.rs
src/: .___pycache__  ._compute_kernel.py  ._core.py  compute_kernel.py  core.py
tests/: .___init__.py  .___pycache__  ._conftest.py  ._test_smoke.py
